references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ActionUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:911d4fd65fe5acd8bc82f27fa4e3fe00246ef9bbbba300a2310bbde44dd0e732
size 2894
